# metar_prediction

./: .env  README.md  metar_taf_db_upload.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml  scheduler_v3.yml
metar_db_upload/: pyproject.toml  start_metar_script.sh
src/: awc_api_mongo_upload.py
tests/: test_mongo_connection.py
workflows/: schedule.yml
